@@ -3,7 +3,7 @@
 TODO for 0.26
 
 - Cursor placement and Backspace in text context (2 days)
-- Save as plain SVG (1 day)
+- Save as plain SVG (DONE)
 - Recently opened file list (DONE)
 - Cleanups
 - Speedups
