@@ -1,5 +1,8 @@
 2002-09-18  Lauris Kaplinski  <lauris@kaplinski.com>
 
+	* src/sp-ellipse.c (sp_arc_set_elliptical_path_attribute): Lay 2PI arcs as 2 segments
+	(sp_arc_write): Write SVG <ellipse> if it really is one
+
 	* src/style.c (sp_style_write_ienum): We compare computed values, to
 	avoid unnecessary setting of attributes
 	(sp_style_merge_from_parent): Set only computed values for everything
